# central-exchange-tracker

./: .gitignore  Dockerfile-django  Dockerfile-exchanges  README.md  docker-compose.yml  pyproject.toml
crypto_api/crypto_api/: asgi.py  settings.py  urls.py  wsgi.py
crypto_api/public_api/: conf.py  urls.py  views.py
exchanges_api/: conf.py  listener.py  run.py
exchanges_api/exchanges/: base.py  binance.py  kraken.py
exchanges_api/schemas/: binance.py  common.py  kraken.py
